Add point on order short view
